sumo/tests/dfrouter/detector_types/errors/detectors_output_false/errors.dfrouter
Error: Could not build output file 'xxx/detectors_def.det.xml'.
Quitting (on error).
